Updated sidebar issue

--- a/rfd.html
+++ b/rfd.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/rfd.css">
 </head>
+
 <body>
-    <div class="head">
-        <header>Reason For Delinquency</header>
+    <div class="layout">
+        <iframe src="sidebar.html" frameborder="0" class="sidebar-iframe"></iframe>
+        <div class="main-content">
+            <div class="head">
+                <header>Reason For Delinquency</header>
+            </div>
+            <div class="table-wrapper">
+                <table>
+                    <tr>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, eveniet, incidunt aut
+                            voluptndae saepe esse dolorum velit. Veniam vel dolores facilis ex?</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae nisi error et, tempora,
+                            fuga
+                            magnam natus modi consequatur consequuntur sunt eos maxime, sit ipsa hic omnis quia rem
+                            aliquam
+                            cupiditate.</td>
+                    </tr>
+                    <tr>
+                        <td>saldas</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
-    <div class="table-wrapper">
-        <table>
-            <tr>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, eveniet, incidunt aut voluptndae saepe esse dolorum velit. Veniam vel dolores facilis ex?</td>
-                <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae nisi error et, tempora, fuga magnam natus modi consequatur consequuntur sunt eos maxime, sit ipsa hic omnis quia rem aliquam cupiditate.</td>
-            </tr>
-            <tr>
-                <td>saldas</td>
-            </tr>
-        </table>
     </div>
 </body>
+
 </html>
