--- a/rfd.html
+++ b/rfd.html
@@ -17,6 +17,8 @@
             </div>
             <div class="table-wrapper">
                 <table>
+                    <th>Dropdown</th>
+                    <th>Dropdown</th>
                     <tr>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, eveniet, incidunt aut
                             voluptndae saepe esse dolorum velit. Veniam vel dolores facilis ex?</td>
