QRG size update

--- a/QRG.html
+++ b/QRG.html
@@ -12,12 +12,12 @@
     <!-- QRG -->
     
     <div class="container">
-        <div class="column">
+        <div class="column" id="column1">
             <div class="column-title">Sample Text 1</div>
             <div class="grid">
-                <button class="grid-button">1</button>
-                <button class="grid-button">2</button>
-                <button class="grid-button">3</button>
+                <button class="grid-button">A proper id collector</button>
+                <button class="grid-button">dasdjasjdasjkldjasdljkasjl</button>
+                <button class="grid-button"></button>
                 <button class="grid-button">4</button>
                 <button class="grid-button">5</button>
                 <button class="grid-button">1</button>
@@ -31,7 +31,7 @@
         </div>
     
 
-        <div class="column">
+        <div class="column" id="column2">
             <div class="column-title">Sample Text 1</div>
             <div class="grid">
                 <button class="grid-button">1</button>
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div class="column">
+        <div class="column" id="column3">
             <div class="column-title">Sample Text 1</div>
             <div class="grid">
                 <button class="grid-button">1</button>
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-        <div class="column">
+        <div class="column" id="column4">
             <div class="column-title">Sample Text 1</div>
             <div class="grid">
                 <button class="grid-button">1</button>
