--- a/sidebar.html
+++ b/sidebar.html
@@ -11,22 +11,66 @@
 <body>
 
   <!-- Sidebar -->
-  <div id="mySidebar" class="sidebar" onmouseover="toggleSidebar()" onmouseout="toggleSidebar()">
-    <div class="dropdown">
-        <a href="javascript:void(0);" onclick="toggleDropdown('dropdown-retail')">
-          <i class="material-icons">account_balance</i><span class="icon-text">Retail</span>
-        </a>
-        <div id="dropdown-retail" class="dropdown-content">
-          <a href="#">Retail Sub 1</a>
-          <a href="#">Retail Sub 2</a>
-        </div>
-      </div>
-    <a href="#"><i class="material-icons">copyright</i><span class="icon-text">Oracle</span></a>
-    <a href="#"><i class="material-icons">real_estate_agent</i><span class="icon-text">MSP</span></a>
-    <a href="#"><i class="material-icons">local_convenience_store</i><span class="icon-text">Commercial</span></a>
-    <a href="#"><i class="material-icons">school</i><span class="icon-text">KER</span></a>
+  <div class="sidebar">
+    <button class="nav-item active">
+      <span class="material-icons">home</span>
+      <span class="label">Home</span>
+    </button>
+    <button class="nav-item" onclick="showDrawerSection('developSection')">
+      <span class="material-icons">code</span>
+      <span class="label">Develop</span>
+    </button>
+    
+    <button class="nav-item" onclick="showDrawerSection('getStartedSection')">
+      <span class="material-icons">apps</span>
+      <span class="label">Get started</span>
+    </button>
+    
+    <button class="nav-item" onclick="showDrawerSection('foundationSection')">
+      <span class="material-icons">description</span>
+      <span class="label">Foundations</span>
+    </button>
   </div>
-
+  
+  <div class="drawer" id="drawer">
+  
+    <div class="drawer-section" id="developSection">
+      <div class="drawer-header">Develop overview</div>
+      <ul class="dropdown-list">
+        <li onclick="toggleSubList(this)">Android
+          <ul class="sub-list">
+            <li onclick="event.stopPropagation(); toggleSubList(this)">Jetpack
+              <ul class="sub-list">
+                <li>Compose</li>
+                <li>Navigation</li>
+              </ul>
+            </li>
+            <li>Studio</li>
+          </ul>
+        </li>
+        <li>Flutter</li>
+        <li>Web</li>
+      </ul>
+    </div>
+  
+    <div class="drawer-section" id="getStartedSection">
+      <div class="drawer-header">Get Started overview</div>
+      <ul class="dropdown-list">
+        <li>Installation</li>
+        <li>Quick Start</li>
+        <li>Examples</li>
+      </ul>
+    </div>
+  
+    <div class="drawer-section" id="foundationSection">
+      <div class="drawer-header">Foundations</div>
+      <ul class="dropdown-list">
+        <li>Principles</li>
+        <li>Guidelines</li>
+      </ul>
+    </div>
+  
+  </div>
   <!-- Main content -->
   <div id="main">
 
