--- a/sidebar.html
+++ b/sidebar.html
@@ -13,7 +13,7 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <a href="home.html" class="nav-item" onclick="showDrawerSection(null, this)">
-      <span class="material-icons">home</span>
+      <img src="path/to/your-logo.png" alt="Logo" class="logo-icon" />
       <span class="label">Home</span>
     </a>
     <button class="nav-item" onclick="showDrawerSection('developSection',this)">
