--- a/index.html
+++ b/index.html
@@ -1,167 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Final</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sidebar with Right Submenu (Offline)</title>
 
-  <!-- TailwindCSS & React -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <!-- TailwindCSS & React -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      src="https://unpkg.com/react@18/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+      crossorigin
+    ></script>
 
-  <!-- Google Material Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+    <!-- Material Icons -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+        font-size: 24px;
+      }
+      iframe {
+        border: none;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body class="bg-gray-100">
+    <div id="root" class="h-screen"></div>
 
-  <style>
-    .material-symbols-outlined {
-      font-variation-settings:
-        'FILL' 0,
-        'wght' 400,
-        'GRAD' 0,
-        'opsz' 24;
-      font-size: 24px;
-    }
-    iframe {
-      border: none;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-</head>
+    <script>
+      const { useState, createElement } = React;
 
-<body class="bg-gray-100">
-  <div id="root"></div>
+      // Sidebar Component
+      function Sidebar({ activeFile, setActiveFile }) {
+        const [openMenu, setOpenMenu] = useState(null);
 
-  <script>
-    const { useState, useEffect, createElement } = React;
+        const menu = [
+          { name: "Home", icon: "home", file: "pages/home.html" },
+          {
+            name: "Account",
+            icon: "person",
+            sub: [
+              { name: "Profile", file: "pages/account/profile.html" },
+              { name: "Security", file: "pages/account/security.html" },
+            ],
+          },
+          { name: "Settings", icon: "settings", file: "proj.html" },
+        ];
 
-    // Sidebar Component
-    function Sidebar({ activePage, setActivePage }) {
-      const [activeMenu, setActiveMenu] = useState(null);
-
-      const menu = [
-        { name: "Home", icon: "home" },
-        { name: "Account", icon: "person", sub: ["Profile", "Security","Profile", "Security","Profile", "Security","Profile", "Security"] },
-        { name: "Account", icon: "person", sub: ["Profile", "Security"] },
-        { name: "Account", icon: "person", sub: ["Profile", "Security"] },
-        { name: "Settings", icon: "settings" },
-      ];
-
-      return createElement(
-        "div",
-        { className: "flex" },
-        // Primary Sidebar
-        createElement(
+        return createElement(
           "div",
-          { className: "w-20 bg-white shadow-lg flex flex-col items-center py-4" },
-          // LOGO section at the top
+          { className: "flex" },
+          // Primary Sidebar
           createElement(
             "div",
             {
-              className: "mb-6 cursor-pointer",
-              onClick: () => {
-                setActivePage("Home");
-                setActiveMenu(null);
-              }
+              className:
+                "w-20 bg-white shadow-lg flex flex-col items-center py-4",
             },
-            createElement("img", {
-              src: "logo.png", // put your logo.png in the same folder as index.html
-              alt: "Logo",
-              className: "w-10 h-10 rounded-full shadow-md"
-            })
-          ),
-          // Menu Items
-          menu.map((item, index) =>
+            // Logo at the top
             createElement(
               "div",
               {
-                key: index,
-                className:
-                  "cursor-pointer text-gray-700 hover:bg-gray-100 transition-all duration-300 p-2 w-full flex flex-col items-center " +
-                  (activePage === item.name ? "bg-blue-100 text-blue-700" : ""),
+                className: "mb-6 cursor-pointer",
                 onClick: () => {
-                  if (item.sub) {
-                    setActiveMenu(activeMenu === item.name ? null : item.name);
-                  } else {
-                    setActivePage(item.name);
-                    setActiveMenu(null);
-                  }
+                  setActiveFile("pages/home.html");
+                  setOpenMenu(null);
                 },
               },
-              createElement("span", { className: "material-symbols-outlined" }, item.icon),
-              createElement("span", { className: "text-xs mt-1" }, item.name)
-            )
-          )
-        ),
-
-        // Submenu Sidebar
-        activeMenu
-          ? createElement(
-              "div",
-              { className: "w-48 bg-gray-50 border-r border-gray-200 shadow-inner flex flex-col py-4" },
-              createElement("h3", { className: "px-4 text-gray-600 font-semibold mb-2" }, activeMenu),
-              menu
-                .find((m) => m.name === activeMenu)
-                .sub.map((subItem, i) =>
-                  createElement(
-                    "div",
-                    {
-                      key: i,
-                      className:
-                        "cursor-pointer text-gray-700 hover:bg-gray-200 px-4 py-2 rounded-md mx-2 " +
-                        (activePage === subItem ? "bg-blue-100 text-blue-700" : ""),
-                      onClick: () => setActivePage(subItem),
+              createElement("img", {
+                src: "logo.png",
+                alt: "Logo",
+                className: "w-10 h-10 rounded-full shadow-md",
+              })
+            ),
+            menu.map((item, index) =>
+              createElement(
+                "div",
+                { key: index, className: "w-full" },
+                // Main menu button
+                createElement(
+                  "div",
+                  {
+                    className:
+                      "cursor-pointer text-gray-700 hover:bg-gray-100 transition-all duration-300 p-2 w-full flex flex-col items-center " +
+                      (activeFile === item.file
+                        ? "bg-blue-100 text-blue-700"
+                        : ""),
+                    onClick: () => {
+                      if (item.sub) {
+                        setOpenMenu(openMenu === item.name ? null : item.name);
+                      } else {
+                        setActiveFile(item.file);
+                        setOpenMenu(null);
+                      }
                     },
-                    subItem
+                  },
+                  createElement(
+                    "span",
+                    { className: "material-symbols-outlined" },
+                    item.icon
+                  ),
+                  createElement(
+                    "span",
+                    { className: "text-xs mt-1" },
+                    item.name
                   )
                 )
+              )
             )
-          : null
-      );
-    }
+          ),
+          // Submenu Sidebar (right)
+          openMenu
+            ? createElement(
+                "div",
+                {
+                  className:
+                    "w-48 bg-gray-50 border-r border-gray-200 shadow-inner flex flex-col py-4",
+                },
+                createElement(
+                  "h3",
+                  { className: "px-4 text-gray-600 font-semibold mb-2" },
+                  openMenu
+                ),
+                menu
+                  .find((m) => m.name === openMenu)
+                  .sub.map((subItem, i) =>
+                    createElement(
+                      "div",
+                      {
+                        key: i,
+                        className:
+                          "cursor-pointer text-gray-700 hover:bg-gray-200 px-4 py-2 rounded-md mx-2 " +
+                          (activeFile === subItem.file
+                            ? "bg-blue-100 text-blue-700"
+                            : ""),
+                        onClick: () => setActiveFile(subItem.file),
+                      },
+                      subItem.name
+                    )
+                  )
+              )
+            : null
+        );
+      }
 
-    // Main App
-    function App() {
-      const [activePage, setActivePage] = useState("Home");
-      const [iframeSrc, setIframeSrc] = useState("pages/home.html");
-      const [error, setError] = useState(false);
+      // Main App
+      function App() {
+        const [activeFile, setActiveFile] = useState("pages/home.html");
 
-      const pageFiles = {
-        Home: "pages/home.html",
-        Account: "pages/account.html",
-        Settings: "pages/settings.html",
-        Profile: "pages/account/profile.html",
-        Security: "pages/account/security.html",
-      };
+        return createElement(
+          "div",
+          { className: "flex h-full" },
+          createElement(Sidebar, { activeFile, setActiveFile }),
+          createElement("iframe", { src: activeFile })
+        );
+      }
 
-      useEffect(() => {
-        const path = pageFiles[activePage] || "pages/404.html";
-        setError(false);
-
-        fetch(path)
-          .then((res) => {
-            if (!res.ok) throw new Error("Not found");
-            setIframeSrc(path);
-          })
-          .catch(() => {
-            setIframeSrc("pages/404.html");
-            setError(true);
-          });
-      }, [activePage]);
-
-      return createElement(
-        "div",
-        { className: "flex h-screen" },
-        createElement(Sidebar, { activePage, setActivePage }),
-        createElement("div", { className: "flex-1 bg-white overflow-hidden" },
-          createElement("iframe", { src: iframeSrc, title: activePage })
-        )
-      );
-    }
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(createElement(App));
-  </script>
-</body>
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render(createElement(App));
+    </script>
+  </body>
 </html>
